<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation = "vertical"
    android:layout_margin = "37dp"
    tools:context=".Formulario">


    <EditText
        android:id = "@+id/et_Nombre"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/msg_nombre"
        android:layout_marginBottom = "12dp"
        />

    <EditText
        android:id = "@+id/et_Edad"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/msg_edad"
        android:layout_marginBottom = "12dp"
        />

    <EditText
        android:id = "@+id/et_Ciudad"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/msg_ciudad"
        android:layout_marginBottom = "12dp"
        />

    <EditText
        android:id = "@+id/et_Correo"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/msg_correo"
        android:layout_marginBottom = "12dp"
        />

    <Button
        android:id = "@+id/btn_Continuar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btn_continuar"
        />

</LinearLayout>